tests/baselines/reference/illegalSuperCallsInConstructor.errors.txt
illegalSuperCallsInConstructor.ts(6,5): error TS2377: Constructors for derived classes must contain a 'super' call.
illegalSuperCallsInConstructor.ts(7,24): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
illegalSuperCallsInConstructor.ts(8,26): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
illegalSuperCallsInConstructor.ts(9,32): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
illegalSuperCallsInConstructor.ts(12,17): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
illegalSuperCallsInConstructor.ts(16,17): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== illegalSuperCallsInConstructor.ts (6 errors) ====
    class Base {
        x: string;
    }
     
    class Derived extends Base {
        constructor() {
        ~~~~~~~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
            var r2 = () => super();
                           ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            var r3 = () => { super(); }
                             ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            var r4 = function () { super(); }
                                   ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            var r5 = {
                get foo() {
                    super();
                    ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
                    return 1;
                },
                set foo(v: number) {
                    super();
                    ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
                }
            }
        }
    }